src/test/ui/feature-gates/feature-gate-crate_in_paths.rs
struct S;

fn main() {
    let _ = crate::S; //~ ERROR `crate` in paths is experimental
}
